--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,7 @@ input, select, textarea {
 		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
 		background-image: url("images/backPic.jpg");
+
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -121,7 +122,8 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		/* background-color: #935d8c; */
+		background-image: url("images/backPic.jpg");
 		color: rgba(255, 255, 255, 0.65);
 	}
 
