--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,8 +104,7 @@ input, select, textarea {
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
-		background-image: url("images/backPic.jpg");
-
+		/* background-image: url("images/backPic.jpg"); */
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -122,8 +121,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		/* background-color: #935d8c; */
-		background-image: url("images/backPic.jpg");
+		background-color: #935d8c;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
